--- a/client/app/pages/credentials/credentials.css
+++ b/client/app/pages/credentials/credentials.css
@@ -1,8 +1,26 @@
 .input__label {
     display: block;
+    position: relative;
 }
+.input__label input {
+    padding: 5px;
+    border-radius: 2px;
+}
+.input__label input.ng-invalid {
+    border: 1px solid #f00;
+}
+.input__label+.input__label {
+    margin-top: 16px;
+}
+
 .input__error-hint {
     display: none;
+    color: #f00;
+    font-weight: normal;
+    position: absolute;
+    left: 105%;
+    right: -100%;
+    line-height: 30px;
 }
 .ng-touched.ng-invalid~.input__error-hint {
     display: inline;
