--- a/client/app/components/controls/controls.html
+++ b/client/app/components/controls/controls.html
@@ -1,14 +1,23 @@
-<div class="" ng-if="ControlsCtrl.pages[ControlsCtrl.active + 1]">
-    <button
+<div ng-if="ControlsCtrl.pages[ControlsCtrl.active + 1]">
+    <button class="controls__button"
         ng-disabled="!ControlsCtrl.pages[ControlsCtrl.active - 1]"
         ng-click="ControlsCtrl.goPrevPage()"
-        >Предыдущий</button>
-    <button
+        >Предыдущий
+    </button>
+    <button class="controls__button"
+        ng-if="ControlsCtrl.pages[ControlsCtrl.active + 2]"
         ng-disabled="!ControlsCtrl.pages[ControlsCtrl.active + 1] || !ControlsCtrl.nextAvailiable"
         ng-click="ControlsCtrl.goNextPage()"
-        >Следующий</button>
+        >Следующий
+    </button>
+    <button class="controls__button--again"
+            ng-if="!ControlsCtrl.pages[ControlsCtrl.active + 2]"
+            ng-disabled="!ControlsCtrl.pages[ControlsCtrl.active + 1] || !ControlsCtrl.nextAvailiable"
+            ng-click="ControlsCtrl.goNextPage()"
+    >Завершить
+    </button>
 </div>
-<button
+<button class="controls__button--again"
         ng-if="!ControlsCtrl.pages[ControlsCtrl.active + 1]"
         ng-click="ControlsCtrl.goStart()"
->Начать сначала</button>
+>Пройти заново</button>
