--- a/client/app/pages/socials/socials.css
+++ b/client/app/pages/socials/socials.css
@@ -1,5 +1,16 @@
 .networks {
     display: flex;
     flex-direction: column;
+}
+
+.networks__container {
+    display: flex;
     align-items: flex-start;
+    justify-content: space-between;
+    position: relative;
+}
+
+.networks__checkbox-container {
+    margin-right: 10px;
+    padding: 5px;
 }
